--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
             <button><img src="images/search.png"></button>
         </div>
 
+        <div class="weather">
+            <img src="images/rain.png" class="weather-icon">
+            <h1 class="temp">24°c</h1>
+            <h2 class="city">New Delhi</h2>
+            <div class="details">
+            <div class="col">
+                <img src="images/humidity.png">
+                <div>
+                    <p class="humidity">50%</p>
+                    <p>Humidity</p>
+                </div>
+            </div>
+            <div class="col">
+                <img src="images/wind.png">
+                <div>
+                    <p class="wind">5 km/h</p>
+                    <p>Wind Speed</p>
+                </div>
+            </div>
+           </div>
+        </div>
+
     </div>
 </body>
 </html>
